Bug 272557 - konquer crash
Summary: konquer crash
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-05 18:57 UTC by glen herron
Modified: 2011-06-25 07:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description glen herron 2011-05-05 18:57:39 UTC
Application: konqueror (4.6.00 (4.6.0) "release 6")
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

i was rapidly jumping from folder to folder from disk to disk

The crash does not seem to be reproducible.

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb58df710 (LWP 16861))]

Thread 2 (Thread 0xadc9bb70 (LWP 16862)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb60d303e in poll () from /lib/libc.so.6
#2  0xb5b590bb in g_poll () from /lib/libglib-2.0.so.0
#3  0xb5b48c46 in ?? () from /lib/libglib-2.0.so.0
#4  0xb5b48fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0xb6ec77b7 in QEventDispatcherGlib::processEvents (this=0x830a348, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0xb6e982bd in QEventLoop::processEvents (this=0xadc9b2b0, flags=...) at kernel/qeventloop.cpp:149
#7  0xb6e984e9 in QEventLoop::exec (this=0xadc9b2b0, flags=...) at kernel/qeventloop.cpp:201
#8  0xb6d997b9 in QThread::exec (this=0x8318900) at thread/qthread.cpp:490
#9  0xb6e7823d in QInotifyFileSystemWatcherEngine::run (this=0x8318900) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb6d9c3aa in QThreadPrivate::start (arg=0x8318900) at thread/qthread_unix.cpp:285
#11 0xb6d20b05 in start_thread () from /lib/libpthread.so.0
#12 0xb60ddd5e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb58df710 (LWP 16861)):
[KCrash Handler]
#7  KonqView::upUrl (this=0x0) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqview.cpp:864
#8  0xb0dc5aec in KonqMainWindow::slotUpDelayed (this=0x81572a8) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmainwindow.cpp:2637
#9  0xb0dcfe0d in KonqMainWindow::qt_metacall (this=0x81572a8, _c=QMetaObject::InvokeMetaMethod, _id=36, _a=0x87153f8) at /usr/src/debug/kdebase-4.6.0/build/apps/konqueror/src/konqmainwindow.moc:372
#10 0xb6e9f8cd in QMetaObject::metacall (object=0x81572a8, cl=QMetaObject::InvokeMetaMethod, idx=86, argv=0x87153f8) at kernel/qmetaobject.cpp:237
#11 0xb6eaa3a5 in QMetaCallEvent::placeMetaCall (this=0x87dc778, object=0x81572a8) at kernel/qobject.cpp:534
#12 0xb6eae5af in QObject::event (this=0x81572a8, e=0x87dc778) at kernel/qobject.cpp:1211
#13 0xb640017c in QWidget::event (this=0x81572a8, event=0x87dc778) at kernel/qwidget.cpp:8659
#14 0xb682c29c in QMainWindow::event (this=0x81572a8, event=0x87dc778) at widgets/qmainwindow.cpp:1478
#15 0xb75b6ae4 in KMainWindow::event (this=0x81572a8, ev=0x87dc778) at /usr/src/debug/kdelibs-4.6.0/kdeui/widgets/kmainwindow.cpp:1100
#16 0xb75b6d82 in KXmlGuiWindow::event (this=0x81572a8, ev=0x87dc778) at /usr/src/debug/kdelibs-4.6.0/kdeui/xmlgui/kxmlguiwindow.cpp:126
#17 0xb0dae9bb in KonqMainWindow::event (this=0x81572a8, e=0x87dc778) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmainwindow.cpp:5522
#18 0xb63a5414 in QApplicationPrivate::notify_helper (this=0x80e4318, receiver=0x81572a8, e=0x87dc778) at kernel/qapplication.cpp:4445
#19 0xb63ae174 in QApplication::notify (this=0xbfd7d690, receiver=0x81572a8, e=0x87dc778) at kernel/qapplication.cpp:4324
#20 0xb74f31f1 in KApplication::notify (this=0xbfd7d690, receiver=0x81572a8, event=0x87dc778) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#21 0xb6e98fde in QCoreApplication::notifyInternal (this=0xbfd7d690, receiver=0x81572a8, event=0x87dc778) at kernel/qcoreapplication.cpp:732
#22 0xb6e9cd6c in sendEvent (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.h:215
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.cpp:1373
#24 0xb6e9cebc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#25 0xb6ec75e4 in sendPostedEvents (s=0x80e5288) at kernel/qcoreapplication.h:220
#26 postEventSourceDispatch (s=0x80e5288) at kernel/qeventdispatcher_glib.cpp:277
#27 0xb5b48509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#28 0xb5b48d10 in ?? () from /lib/libglib-2.0.so.0
#29 0xb5b48fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#30 0xb6ec776b in QEventDispatcherGlib::processEvents (this=0x80d3128, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#31 0xb645b55a in QGuiEventDispatcherGlib::processEvents (this=0x80d3128, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#32 0xb6e982bd in QEventLoop::processEvents (this=0xbfd7d4c4, flags=...) at kernel/qeventloop.cpp:149
#33 0xb6e984e9 in QEventLoop::exec (this=0xbfd7d4c4, flags=...) at kernel/qeventloop.cpp:201
#34 0xb6e9cf90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#35 0xb63a3104 in QApplication::exec () at kernel/qapplication.cpp:3719
#36 0xb0df134f in kdemain (argc=3, argv=0x80d9530) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmain.cpp:219
#37 0x0804e531 in _start ()

Reported using DrKonqi
Comment 1 Martin Koller 2011-06-11 20:59:50 UTC
This seems to be a 0-pointer deref bug.
I created a patch for it which is pending for review.
http://git.reviewboard.kde.org/r/101586/diff/
Comment 2 Martin Koller 2011-06-25 07:07:47 UTC
Git commit 84e22e084c1dadbadda0f3738d49538bf52cac66 by Martin Koller.
Committed on 24/06/2011 at 21:09.
Pushed by mkoller into branch 'master'.

Add some 0-pointer checks avoiding crashes

BUG: 272557

M  +22   -0    konqueror/src/konqmainwindow.cpp     

http://commits.kde.org/kde-baseapps/84e22e084c1dadbadda0f3738d49538bf52cac66