Add some 0-pointer checks avoiding crashes

BUG: 272557